changed StatSet and implementation to all use statId as keys instead of Stat objects